# nixcon-flakes-training

./: .gitignore  flake.nix
.github/workflows/: check.yml
cpp-project/: CMakeLists.txt
cpp-project/src/: main.cpp
python-project/: pyproject.toml
python-project/python_project/: cli.py
rust-project/: Cargo.toml  urls.txt
rust-project/src/: main.rs
