[tool.poetry]
name = "python-project"
version = "0.1.0"
description = ""
authors = ["Jacek Galowicz <jacek@galowicz.de>"]
readme = "README.md"
packages = [{include = "python_project"}]

[tool.poetry.dependencies]
python = "^3.10"
psycopg2 = "^2.9.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
python_project = 'python_project.cli:main'
